k8s/feathers-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f run.yml convert
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: feathers
  name: feathers
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: feathers
    spec:
      containers:
      - image: us.gcr.io/angular-feathers-test/feathers-app:0.0.1
        name: feathers
        ports:
        - containerPort: 3030
        resources: {}
      restartPolicy: Always
status: {}
