k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f run.yml convert
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 80
  - name: "8443"
    port: 8443
    targetPort: 443
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
